teniendo todos los archivos que tenía antes
